--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
                 <h1>
                     <a href="/">{{ site.name }}</a>
                 </h1>
-                <h2>Web developer and French.</h2>
+                <h2>Web developer</h2>
                 
             </div>
         </header>
