--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
@@ -20,8 +20,8 @@
                     <a href="/">{{ site.name }}</a>
                 </h1>
                 <h2>Web developer</h2>
-                
             </div>
+            <a class="about-me-link" href="#about-me">About</a>
         </header>
         
         <div class="site-content"> 
@@ -29,27 +29,18 @@
                 {{ content }} 
                 <menu class="pagination">
                     {% if paginator.total_pages >= 2 %}
-                        {% if paginator.previous_page %}
-                            <a href="/page/{{ paginator.previous_page }}/" class="previous">Previous</a>
-                        {% else %}
-                            <span class="previous">Previous</span>
-                        {% endif %}
-
                         {% for i in (1..paginator.total_pages)  %}
-                             <a href="/page/{{ i }}/" class="previous">{{i}}</a>
+                            {% if paginator.page != i %} 
+                                <a href="/page/{{ i }}/">{{i}}</a>
+                            {% else %}
+                                <span class="current-page">{{i}}</span>
+                            {% endif %}
                         {% endfor %}
-
-
-                        {% if paginator.next_page %}
-                            <a href="/page{{ paginator.next_page }}" class="next">Next</a>
-                        {% else %}
-                            <span class="next ">Next</span>
-                        {% endif %}
                     {% endif %}
                 </menu>
             </div>
             <aside class="side-bar"> 
-                <section class="about-me">
+                <section id="about-me" class="about-me">
                     <h2>About:</h2>
                     <p>
                         My name is François de Campredon, a web developer working at <a href="http://kapit.fr/">Kap IT</a> Paris.<br />
@@ -96,7 +87,7 @@
             </aside>
         </div>
         <footer class="site-footer">
-            <p class="copyright"> Copyright © 2014 François de Campredon </p>
+            <p class="copyright"> Copyright © 2012-2014 François de Campredon </p>
         </footer>
     </body>
 </html>
