--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
                     <h2>Follows:</h2>
                     <ul class="icon-list">
                         <li>
-                            <a href="/feed/">
+                            <a href="/feed.xml">
                                 <span class="social-icon-rss" ></span>
                                 RSS
                             </a>
