--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,8 @@
 }
 
 html, body {
-    min-width: 100%;
-    min-height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 body {
@@ -52,6 +52,7 @@ a:active,a:hover,a:focus {
 
 .site-header {
     border-bottom: 1px solid #ccc;
+    background-color: #F7FBFF;
     width: 100%;
 }
 
@@ -313,7 +314,7 @@ a:active,a:hover,a:focus {
 .post-date {
     color: #33A8E5;
     position: absolute;
-    top: 0.5rem;
+    top: 0.4rem;
     right: 0px;
 }
 
@@ -376,6 +377,7 @@ a.read-more:hover {
     text-align: center;
     height: 50px;
     border-top: 1px solid #CCC;
+    margin-top: 5px;
 }
 .copyright {
     position: relative;
