--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,6 +76,16 @@
                         </li>
                     </ul>
                 </section>
+                <section class="latest-post">
+                    <h2>Latest posts:</h2>
+                    <ul>  
+                        {% for post in site.posts limit:5 %}  
+                           <li>  
+                               <a href="{{ post.url }}">{{ post.title }}</a>
+                           </li>  
+                        {% endfor %}  
+                    </ul>
+                </section>
             </aside>
         </div>
         <footer class="site-footer">
