--- a/css/main.css
+++ b/css/main.css
@@ -234,6 +234,30 @@ a:active,a:hover,a:focus {
 
 
 
+/* latest-post */
+
+.latest-post li {
+    list-style: none;
+	border-bottom: 1px dashed #CCC;
+    margin-right: 12px;
+    padding-left: 1rem;
+    text-indent: -1.1rem;
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
+
+.latest-post li:before {
+    content: "»";
+    margin-right: 6px;
+    padding-left: 2px;
+    font-size: 0.7rem;
+    position: relative;
+    top: -0.1rem;
+    color: #33A8E5;
+}
+
+
+
 /*****************************************************************************/
 /*
 /* post content
@@ -427,6 +451,10 @@ a.read-more:hover {
         position: absolute;
         top: 62px;
         right: 5px;
+    }
+    
+    .latest-post {
+        display: none;
     }
 }
 
