--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,11 @@
                     {% if paginator.total_pages >= 2 %}
                         {% for i in (1..paginator.total_pages)  %}
                             {% if paginator.page != i %} 
-                                <a href="/page/{{ i }}/">{{i}}</a>
+                                {% if i != 1 %} 
+                                    <a href="/page/{{ i }}/">{{i}}</a>
+                                {% else %}
+                                    <a href="/">{{i}}</a>
+                                {% endif %}
                             {% else %}
                                 <span class="current-page">{{i}}</span>
                             {% endif %}
